force-app/main/default/objects/Song__c/fields/AlbumId__c.field-meta.xml
<CustomField>
    <fullName>AlbumId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AlbumId</label>
    <referenceTo>Album__c</referenceTo>
    <relationshipLabel>Songs</relationshipLabel>
    <relationshipName>songs</relationshipName>
    <type>Lookup</type>
</CustomField>