force-app/main/default/objects/Song__c/fields/ArtistId__c.field-meta.xml
<CustomField>
    <fullName>ArtistId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ArtistId</label>
    <referenceTo>Artist__c</referenceTo>
    <relationshipLabel>Songs</relationshipLabel>
    <relationshipName>songs</relationshipName>
    <type>Lookup</type>
</CustomField>